Fixed right position to prevent overflow for copyright

--- a/src/frontend/HomePage/Home.sass
+++ b/src/frontend/HomePage/Home.sass
@@ -129,7 +129,7 @@ $textColor: #FF4500
             align-items: center
             position: absolute
             top: 150px
-            right: -50px
+            right: 0px
             background: linear-gradient(#f57474,#2087b0)
             color: white
             width: 15vw
